# django_htmx_messages

./: pyproject.toml
src/htmx_messages/: apps.py  middleware.py  urls.py  views.py
