[project]
name = "htmx-messages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ján Madaj", email = "madaj.jan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
